--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  repositories {
-    jcenter()
-    maven {
-      url "https://maven.infullmobile.com/public"
+    repositories {
+        jcenter()
+        maven {
+            url "https://maven.infullmobile.com/public"
+        }
     }
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.3'
-    classpath 'com.infullmobile:toolkit:0.3.20'
-    classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-  }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.infullmobile:toolkit:0.3.20'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath "io.realm:realm-gradle-plugin:2.3.0"
+    }
 }
 
 allprojects {
-  repositories {
-    jcenter()
-    maven { url "https://jitpack.io" }
-  }
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
 }
 
 task clean(type: Delete) {
-  delete rootProject.buildDir
+    delete rootProject.buildDir
 }
