--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // networking
@@ -45,13 +46,6 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_LIBRARY_VERSION"
     compile 'com.google.code.gson:gson:2.7'
 
-    // UI widgets
-    compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.2'
-
     // UI bindings
     compile 'com.jakewharton:butterknife:7.0.1'
-
-    // DI
-//    compile 'com.google.dagger:dagger:2.8'
-//    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 }
