--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,15 @@ dependencies {
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
 
     // networking
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_LIBRARY_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_LIBRARY_VERSION"
-    compile 'com.google.code.gson:gson:2.7'
 
     // UI bindings
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:support-v4:25.1.0'
 }
