WiP - Add user details screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="pl.adamchodera.randomuser">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".RandomUserApplication"
@@ -23,6 +23,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity">
+        </activity>
+        <activity
+            android:name=".activities.UserDetailsActivity"
+            android:label="@string/title_activity_user_details"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pl.adamchodera.randomuser.activities.MainActivity"/>
         </activity>
     </application>
 
