--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.SplashActivity"
+            android:name=".feature.SplashActivity"
             android:noHistory="true"
             android:theme="@style/SplashScreenTheme">
             <intent-filter>
@@ -22,16 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".feature.userslist.UsersListActivity">
         </activity>
         <activity
-            android:name=".activities.UserDetailsActivity"
+            android:name=".feature.details.UserDetailsActivity"
             android:label="@string/title_activity_user_details"
-            android:parentActivityName=".activities.MainActivity"
+            android:parentActivityName=".feature.userslist.UsersListActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="pl.adamchodera.randomuser.activities.MainActivity"/>
+                android:value="pl.adamchodera.randomuser.feature.userslist.UsersListActivity"/>
         </activity>
     </application>
 
