--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,7 @@
         </activity>
         <activity
             android:name=".feature.details.UserDetailsActivity"
-            android:label="@string/title_activity_user_details"
-            android:parentActivityName=".feature.userslist.UsersListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="pl.adamchodera.randomuser.feature.userslist.UsersListActivity"/>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
