--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".feature.userslist.UsersListActivity">
         </activity>
         <activity
-            android:name=".feature.details.UserDetailsActivity"
+            android:name=".feature.userdetails.UserDetailsActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
