Apply code style improvements

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         }
     }
     lintOptions {
-        disable 'AllowBackup', "GoogleAppIndexingWarning"
+        disable 'AllowBackup', "GoogleAppIndexingWarning", "MergeRootFrame"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
