--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
 
     // UI bindings
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    provided "org.projectlombok:lombok:1.12.6"
 }
