--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // UI bindings
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     provided "org.projectlombok:lombok:1.12.6"
 }
